--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,9 @@ private-*.js
 private-*.toml
 SECRET-api-keys.json
 exchange/nusadua
+
+# Additional git repo
+Gekko-BacktestTool
+Gekko-Datasets
+Gekko-Strategies
+gekko-quasar-ui
