--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   "dependencies": {
     "async": "2.1.2",
     "bitfinex-api-node": "^1.2.1",
+    "cluster": "^0.7.7",
     "co-fs": "^1.2.0",
     "commander": "^2.13.0",
+    "convnetjs": "^0.3.0",
+    "gauss": "^0.2.12",
     "gekko": "0.0.9",
     "humanize-duration": "^3.10.0",
     "koa": "^1.2.0",
@@ -28,19 +31,23 @@
     "koa-router": "^5.4.0",
     "koa-static": "^2.0.0",
     "lodash": "2.x",
+    "mathjs": "^5.4.2",
     "moment": "^2.20.1",
+    "numbro": "^2.1.2",
     "opn": "^4.0.2",
+    "os": "^0.1.1",
     "promisify-node": "^0.5.0",
     "prompt-lite": "0.1.1",
     "relieve": "^2.1.3",
     "retry": "^0.10.1",
     "semver": "5.4.1",
     "sqlite3": "^4.0.4",
-    "stats-lite": "^2.0.4",
+    "stats-lite": "^2.2.0",
     "talib": "^1.0.2",
     "tiny-promisify": "^0.1.1",
     "toml": "^2.3.0",
-    "ws": "^6.0.0"
+    "ws": "^6.0.0",
+    "zero-fill": "^2.2.3"
   },
   "devDependencies": {
     "chai": "^4.1.2",
