--- a/package.json
+++ b/package.json
@@ -38,14 +38,16 @@
     "os": "^0.1.1",
     "promisify-node": "^0.5.0",
     "prompt-lite": "0.1.1",
+    "redis": "^2.8.0",
     "relieve": "^2.1.3",
     "retry": "^0.10.1",
     "semver": "5.4.1",
     "sqlite3": "^4.0.4",
     "stats-lite": "^2.2.0",
-    "talib": "^1.0.2",
+    "talib": "^1.0.6",
     "tiny-promisify": "^0.1.1",
     "toml": "^2.3.0",
+    "tulind": "^0.8.15",
     "ws": "^6.0.0",
     "zero-fill": "^2.2.3"
   },
