Gekko core util file changed to enable multiple config file generating with multi_gekko git repo.

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,9 @@ Gekko-BacktestTool
 Gekko-Datasets
 Gekko-Strategies
 gekko-quasar-ui
+
+# multi config generator files
+multi-config-generator/configs
+multi-config-generator/package.json
+multi-config-generator/package.json.lock
+
