gitconfig file change to remove node modules and configs directory of multi-config-generator.

--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,8 @@ Gekko-Strategies
 gekko-quasar-ui
 
 # multi config generator files
+multi-config-generator/node_modules
 multi-config-generator/configs
 multi-config-generator/package.json
-multi-config-generator/package.json.lock
+multi-config-generator/package-lock.json
 
