--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "author": "Mike van Rossum <mike@mvr.me>",
   "dependencies": {
+    "@slack/client": "^3.13.0",
     "async": "2.1.2",
     "bitfinex-api-node": "^1.2.1",
     "cluster": "^0.7.7",
@@ -38,6 +39,7 @@
     "os": "^0.1.1",
     "promisify-node": "^0.5.0",
     "prompt-lite": "0.1.1",
+    "pushbullet": "^1.4.3",
     "relieve": "^2.1.3",
     "retry": "^0.10.1",
     "semver": "5.4.1",
