--- a/.gitignore
+++ b/.gitignore
@@ -62,4 +62,4 @@ multi-config-generator/node_modules
 multi-config-generator/configs
 multi-config-generator/package.json
 multi-config-generator/package-lock.json
-
+multi-config-generator/run_log.txt
