Second commit. All coin markets added to gdax exchange. Gdax gap import start id processing completed. Gap import still doesn't work

--- a/multi-config-generator/package.json
+++ b/multi-config-generator/package.json
@@ -15,8 +15,63 @@
     "remove-node_modules": "rm -rf node_modules || rd /s /q node_modules",
     "remove-configs": "rm -rf configs || rd /s /q configs",
     "remove-configs-win": "rd /s /q configs",
-    "run-all": "npm-run-all --parallel --max-parallel 10 USD-BTC.gda",
-    "USD-BTC.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USD/USD-BTC.gda.js --import"
+    "run-all": "npm-run-all --parallel --max-parallel 10 USD-ALGO.gda BTC-ATOM.gda USDC-BAT.gda BTC-BCH.gda USD-BCH.gda USD-BTC.gda USDC-BTC.gda USDC-CVC.gda USDC-DAI.gda BTC-DASH.gda USD-DASH.gda USDC-DNT.gda BTC-EOS.gda BTC-ETC.gda USD-ETC.gda BTC-ETH.gda USD-ETH.gda USDC-ETH.gda USDC-GNT.gda BTC-KNC.gda USD-KNC.gda USD-LINK.gda USDC-LOOM.gda BTC-LTC.gda USD-LTC.gda USDC-MANA.gda USD-OXT.gda BTC-REP.gda USD-REP.gda BTC-XLM.gda USD-XLM.gda BTC-XRP.gda USD-XRP.gda BTC-XTZ.gda USD-XTZ.gda BTC-ZEC.gda USD-ZEC.gda BTC-ZRX.gda USD-ZRX.gda",
+    "EUR-ETC.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/EUR/EUR-ETC.gda.js --import",
+    "USD-BTC.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USD/USD-BTC.gda.js --import",
+    "BTC-BCH.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/BTC/BTC-BCH.gda.js --import",
+    "USD-BCH.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USD/USD-BCH.gda.js --import",
+    "EUR-BTC.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/EUR/EUR-BTC.gda.js --import",
+    "GBP-BTC.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/GBP/GBP-BTC.gda.js --import",
+    "BTC-ETH.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/BTC/BTC-ETH.gda.js --import",
+    "EUR-ETH.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/EUR/EUR-ETH.gda.js --import",
+    "USD-ETH.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USD/USD-ETH.gda.js --import",
+    "BTC-LTC.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/BTC/BTC-LTC.gda.js --import",
+    "EUR-LTC.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/EUR/EUR-LTC.gda.js --import",
+    "USD-LTC.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USD/USD-LTC.gda.js --import",
+    "EUR-BCH.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/EUR/EUR-BCH.gda.js --import",
+    "USD-ETC.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USD/USD-ETC.gda.js --import",
+    "BTC-ETC.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/BTC/BTC-ETC.gda.js --import",
+    "USD-ZRX.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USD/USD-ZRX.gda.js --import",
+    "BTC-ZRX.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/BTC/BTC-ZRX.gda.js --import",
+    "EUR-ZRX.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/EUR/EUR-ZRX.gda.js --import",
+    "GBP-ETC.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/GBP/GBP-ETC.gda.js --import",
+    "GBP-ETH.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/GBP/GBP-ETH.gda.js --import",
+    "GBP-LTC.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/GBP/GBP-LTC.gda.js --import",
+    "GBP-BCH.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/GBP/GBP-BCH.gda.js --import",
+    "USD-ALGO.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USD/USD-ALGO.gda.js --import",
+    "BTC-ATOM.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/BTC/BTC-ATOM.gda.js --import",
+    "ETH-BAT.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/ETH/ETH-BAT.gda.js --import",
+    "USDC-BAT.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USDC/USDC-BAT.gda.js --import",
+    "USDC-BTC.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USDC/USDC-BTC.gda.js --import",
+    "USDC-CVC.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USDC/USDC-CVC.gda.js --import",
+    "USDC-DAI.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USDC/USDC-DAI.gda.js --import",
+    "BTC-DASH.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/BTC/BTC-DASH.gda.js --import",
+    "USD-DASH.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USD/USD-DASH.gda.js --import",
+    "USDC-DNT.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USDC/USDC-DNT.gda.js --import",
+    "BTC-EOS.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/BTC/BTC-EOS.gda.js --import",
+    "EUR-EOS.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/EUR/EUR-EOS.gda.js --import",
+    "DAI-ETH.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/DAI/DAI-ETH.gda.js --import",
+    "USDC-ETH.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USDC/USDC-ETH.gda.js --import",
+    "USDC-GNT.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USDC/USDC-GNT.gda.js --import",
+    "USD-KNC.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USD/USD-KNC.gda.js --import",
+    "BTC-KNC.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/BTC/BTC-KNC.gda.js --import",
+    "ETH-LINK.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/ETH/ETH-LINK.gda.js --import",
+    "USD-LINK.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USD/USD-LINK.gda.js --import",
+    "USDC-LOOM.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USDC/USDC-LOOM.gda.js --import",
+    "USDC-MANA.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USDC/USDC-MANA.gda.js --import",
+    "USD-OXT.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USD/USD-OXT.gda.js --import",
+    "BTC-REP.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/BTC/BTC-REP.gda.js --import",
+    "USD-REP.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USD/USD-REP.gda.js --import",
+    "USD-XLM.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USD/USD-XLM.gda.js --import",
+    "BTC-XLM.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/BTC/BTC-XLM.gda.js --import",
+    "EUR-XLM.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/EUR/EUR-XLM.gda.js --import",
+    "USD-XRP.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USD/USD-XRP.gda.js --import",
+    "BTC-XRP.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/BTC/BTC-XRP.gda.js --import",
+    "EUR-XRP.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/EUR/EUR-XRP.gda.js --import",
+    "BTC-XTZ.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/BTC/BTC-XTZ.gda.js --import",
+    "USD-XTZ.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USD/USD-XTZ.gda.js --import",
+    "BTC-ZEC.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/BTC/BTC-ZEC.gda.js --import",
+    "USD-ZEC.gda": "node /home/ubuntu/gekko/gekko --config /home/ubuntu/gekko/multi-config-generator/configs/USD/USD-ZEC.gda.js --import"
   },
   "dependencies": {
     "fs-extra": "^5.0.0"
