working code with python ccxt importers.

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,6 @@ multi-config-generator/configs
 multi-config-generator/package.json
 multi-config-generator/package-lock.json
 multi-config-generator/run_log.txt
+
+out.txt
+out_*.txt
