--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gauss": "^0.2.12",
     "gekko": "0.0.9",
     "humanize-duration": "^3.10.0",
+    "ichimoku": "^1.0.4",
     "koa": "^1.2.0",
     "koa-bodyparser": "^2.2.0",
     "koa-cors": "0.0.16",
@@ -46,6 +47,7 @@
     "sqlite3": "^4.0.4",
     "stats-lite": "^2.2.0",
     "talib": "^1.0.2",
+    "technicalindicators": "^3.1.0",
     "tiny-promisify": "^0.1.1",
     "toml": "^2.3.0",
     "ws": "^6.0.0",
